@@ -67,6 +67,9 @@ struct sj_config {
 		bool SjH__shift_ack;
 		bool SjH__half_fake_syn;
 		bool SjH__half_fake_ack;
+		bool SjH__fake_data_anticipation;
+		bool SjH__fake_data_posticipation;
+
 		bool SjH__inject_ipopt;
 		bool SjH__inject_tcpopt;
 
