@@ -1,3 +1,13 @@
+1 Sep 2010:	In those months, when I and evilaliv3 forgotten to update 
+		the changelog, a lot of bug as been solved.
+		- best class splitting in sniffjoke, more c++ compliant
+		- usage of lists and queue 
+		- removed WebIO.cc and the swill library
+		- supported unix socket communication and adminstration
+		- locking, privileges downgrade and chroot
+		- in short, when bugfix is complete this will be the 0.4,
+		at the moment, this is the 0.4 alpha 2 release.
+
 15 Apr 2009:	patch swill_file("images/visualroute.gif", 0); by dezperado
 		adding xplico proof
 
